--- a/css/styles.css
+++ b/css/styles.css
@@ -203,3 +203,14 @@ footer{
 #to-blue{
     background: #1F87C4;
 }
+
+
+
+.subir{
+    color:white;
+    text-decoration: none;
+    display:block;
+    float:right;
+}
+
+
