agregando nuevas hojas de html

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,8 @@
     padding: 7px;
   
 }
-.post h2{
+h2{
+    font-family: Helvetica,Arial;
     font-size: 30px;
     color:#333;
 }
@@ -137,8 +138,10 @@
 
 form input[type="text"],
 form input[type="password"],
-form input[type="email"]{
-
+form input[type="email"],
+form input[type="number"],
+select
+{
     padding: 5px;
     border-radius: 2px;
     border:1px solid #ccc;
@@ -214,3 +217,44 @@ footer{
 }
 
 
+#box{
+    width: 60%;
+    float:left; 
+    margin-top: 40px;
+}
+
+#acordeon{
+    margin-top:20px;
+    
+}
+
+#reloj{
+    font-size: 40px;
+    font-weight: bold;
+    font-family: Helvetica,Arial;
+    color: #333;
+    border: 5px dashed #333;
+    width:30%;
+    padding: 30px;
+    margin: 0px auto;
+}
+
+#form_contact{
+    width:50%;
+    margin-top: 15px;
+    font-family: Helvetica, Arial;
+}
+#form_contact label{
+    display: block;
+    width: 100%;
+    margin-top: 5px;
+}
+
+.form-error{
+   /*  float: right; */
+    font-size: 11px;
+    background: red;
+    color:white;
+    padding:10px;
+    width: 65%;
+}
